--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -22,7 +22,6 @@
         android:orientation="horizontal" >
         
     <TextView
-        android:id="@+id/channel_one"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -30,6 +29,7 @@
         android:text="@string/channel_one" />
     
     <TextView
+        android:id="@+id/channel_one"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -50,6 +50,7 @@
         android:text="@string/channel_two" />
     
     <TextView
+        android:id="@+id/channel_two"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -70,6 +71,7 @@
         android:text="@string/channel_three" />
     
     <TextView
+        android:id="@+id/channel_three"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -90,6 +92,7 @@
         android:text="@string/channel_four" />
     
     <TextView
+        android:id="@+id/channel_four"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -110,6 +113,7 @@
         android:text="@string/channel_five" />
     
     <TextView
+        android:id="@+id/channel_five"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -130,6 +134,7 @@
         android:text="@string/channel_six" />
     
     <TextView
+        android:id="@+id/channel_six"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -150,6 +155,7 @@
         android:text="@string/channel_seven" />
     
     <TextView
+        android:id="@+id/channel_seven"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -170,6 +176,7 @@
         android:text="@string/channel_eight" />
     
     <TextView
+        android:id="@+id/channel_eight"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -190,6 +197,7 @@
         android:text="@string/channel_nine" />
     
     <TextView
+        android:id="@+id/channel_nine"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -210,6 +218,7 @@
         android:text="@string/channel_ten" />
     
     <TextView
+        android:id="@+id/channel_ten"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -230,6 +239,7 @@
         android:text="@string/channel_eleven" />
     
     <TextView
+        android:id="@+id/channel_eleven"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -250,6 +260,7 @@
         android:text="@string/channel_twelve" />
     
     <TextView
+        android:id="@+id/channel_twelve"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -271,6 +282,7 @@
     
     <TextView
         android:layout_width="0dp"
+        android:id="@+id/channel_thirteen"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:layout_weight="1" />
@@ -290,6 +302,7 @@
         android:text="@string/channel_fourteen" />
     
     <TextView
+        android:id="@+id/channel_fourteen"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
